js/src/tests/test262/language/import/import-defer/errors/get-other-while-evaluating/main.js
import
"
.
/
dep_FIXTURE
.
js
"
;
assert
(
globalThis
[
"
error
on
main
.
foo
"
]
instanceof
TypeError
"
main
.
foo
while
evaluating
throws
a
TypeError
"
)
;
reportCompare
(
0
0
)
;
